[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
prost = "0.11.2"
prost-derive = "0.11.2"
tokio = { version = "1.21.2", features = ["full"] }

[build-dependencies]
prost-build = "0.11.2"
